# mesh-texture-synthesis

./: .gitignore  Cargo.toml  README.md  setup.py  style_transfer.py  texture_synthesis.py  tmscnn_layers.py  utils.py
src/: float.rs  lib.rs  line.rs  surface_sampling.rs  tmscnn.rs  triangle.rs  utils.rs
tmscnn/: __init__.py
tmscnn.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
